--- a/index.html
+++ b/index.html
@@ -1,60 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <link rel="stylesheet" href="css/styles.css">
-  
+
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
   <div class="main-content">
-        <h2 class="content-title">Reliable, efficient delivery</h2>
-        <h2 class="content-subtitle">Powered by Technology</h2>
-        <p>Our Artificial Intelligence powered tools use millions of project data points 
-          to ensure that your project is successful</p>
-      </div>
+    <h2 class="content-title">Reliable, efficient delivery</h2>
+    <h2 class="content-subtitle">Powered by Technology</h2>
+    <p>Our Artificial Intelligence powered tools use millions of project data points
+      to ensure that your project is successful</p>
+  </div>
 
 
-    <div class="card">
-      <div class="supervisor">
-        <h2>Supervisor</h2>
-        Monitors activity to identify project roadblocks
-        <img src="./images/icon-supervisor.svg" alt="an icon of a magnifying glass">
-      </div>
-      <div class="team-builder">
-        <h2>Team Builder</h2>
-        Scans our talent network to create the optimal team for your project
-        <img src="./images/icon-team-builder.svg" alt="">
-      </div>
-      <div class="karma">
-        <h2>Karma</h2>
-        Regularly evaluates our talent to ensure quality
-        <img src="./images/icon-karma.svg" alt="">
-      </div>
-      <div class="calculator">
-        <h2>Calculator</h2>
-        Uses data from past projects to provide better delivery estimates
-        <img src="./images/icon-calculator.svg" alt="">
-      </div>
+  <div class="card">
+    <div class="supervisor">
+      <h2>Supervisor</h2>
+      Monitors activity to identify project roadblocks
+      <img src="./images/icon-supervisor.svg" alt="an icon of a magnifying glass">
     </div>
+    <div class="team-builder">
+      <h2>Team Builder</h2>
+      Scans our talent network to create the optimal team for your project
+      <img src="./images/icon-team-builder.svg" alt="">
+    </div>
+    <div class="karma">
+      <h2>Karma</h2>
+      Regularly evaluates our talent to ensure quality
+      <img src="./images/icon-karma.svg" alt="">
+    </div>
+    <div class="calculator">
+      <h2>Calculator</h2>
+      Uses data from past projects to provide better delivery estimates
+      <img src="./images/icon-calculator.svg" alt="">
+    </div>
+  </div>
 
 
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Andrés Orellana</a>.
     </p>
   </footer>
 </body>
+
 </html>
